force-app/main/default/objects/Contract_Line__c/Contract_Line__c.object-meta.xml
<CustomObject>
    <label>Contract Regel</label>
    <nameField>
        <displayFormat>CL-{0000}</displayFormat>
        <label>Contract Line Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Regels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>