force-app/main/default/objects/Contract_Line__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>This checkbox is selected if the contract line is active based on entered active from date and active to date.</description>
    <formula>IF(
AND(Active_from_Date__c &lt;= TODAY(),
OR(Active_to_Date__c &gt;= TODAY(),
ISBLANK(Active_to_Date__c)
)
), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This checkbox is selected if the contract line is active based on entered active from date and active to date.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>