force-app/main/default/objects/Contract_Line__c/fields/Actual_Usage__c.field-meta.xml
<CustomField>
    <fullName>Actual_Usage__c</fullName>
    <description>For what purpose has this unit been contracted</description>
    <label>Actual Usage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>