force-app/main/default/objects/Contract_Line__c/fields/Administration_Id__c.field-meta.xml
<CustomField>
    <fullName>Administration_Id__c</fullName>
    <description>System where the external id originated</description>
    <label>Administration Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>