force-app/main/default/objects/Contract_Line__c/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <description>Contract Number of the active Contract Line</description>
    <externalId>true</externalId>
    <label>Contract Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>