force-app/main/default/objects/Contract_Line__c/fields/Contract_Unit__c.field-meta.xml
<CustomField>
    <fullName>Contract_Unit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Contract Unit this Contract Line refers to</description>
    <inlineHelpText>The Contract Unit this Contract Line refers to</inlineHelpText>
    <label>Contract Unit</label>
    <referenceTo>Contract_Unit__c</referenceTo>
    <relationshipLabel>Contract Lines</relationshipLabel>
    <relationshipName>Contract_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>