force-app/main/default/objects/Contract_Line__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>Identifier from the system listed as Id administration</description>
    <externalId>true</externalId>
    <inlineHelpText>Identifier from the system listed as Id administration</inlineHelpText>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>