force-app/main/default/objects/Contract_Line__c/fields/Next_Rent_Price_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Rent_Price_Change_Date__c</fullName>
    <description>Date the next change in rent price will occur</description>
    <inlineHelpText>Date the next change in rent price will occur</inlineHelpText>
    <label>Next Rent Price Change Date</label>
    <type>Date</type>
</CustomField>