force-app/main/default/objects/Contract_Line__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <description>Type of product this contract was for</description>
    <inlineHelpText>Type of product this contract was for</inlineHelpText>
    <label>Product Description</label>
    <type>TextArea</type>
</CustomField>