force-app/main/default/objects/Contract_Line__c/fields/Real_Estate_Contract__c.field-meta.xml
<CustomField>
    <fullName>Real_Estate_Contract__c</fullName>
    <description>Line belongs to this contract</description>
    <label>Real Estate Contract</label>
    <referenceTo>Real_Estate_Contract__c</referenceTo>
    <relationshipLabel>Contract Lines</relationshipLabel>
    <relationshipName>Contract_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>