force-app/main/default/objects/Contract_Line__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <description>Used to enter the source system of this contract line in order to know that last update of External ID should update the previous contract lines with same contract number</description>
    <label>Source System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>