force-app/main/default/objects/Contract_Line__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the contract</description>
    <inlineHelpText>Status of the contract</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BEE</fullName>
                <label>Beeindigd</label>
            </value>
            <value>
                <fullName>GEA</fullName>
                <label>Geannuleerd</label>
            </value>
            <value>
                <fullName>GOE</fullName>
                <label>Goedgekeurd</label>
            </value>
            <value>
                <fullName>LOP</fullName>
                <label>Lopend</label>
            </value>
            <value>
                <fullName>ONT</fullName>
                <label>Ontbonden</label>
            </value>
            <value>
                <fullName>OPG</fullName>
                <label>Opgezegd</label>
            </value>
            <value>
                <fullName>VER</fullName>
                <label>Vernietigd</label>
            </value>
            <value>
                <fullName>VOO</fullName>
                <label>Voorlopig</label>
            </value>
            <value>
                <fullName>VOP</fullName>
                <label>Voorlopig opgezegd</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>