force-app/main/default/objects/Contract_Line__c/listViews/Koopcontracten.listView-meta.xml
<ListView>
    <fullName>Koopcontracten</fullName>
    <columns>NAME</columns>
    <columns>Real_Estate_Contract__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Price__c</columns>
    <columns>Contract_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <label>Contracten</label>
</ListView>